--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@azure/msal-node": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "request-ip": "^2.1.3"
   }
 }
